--- a/style/global.css
+++ b/style/global.css
@@ -274,6 +274,7 @@ textarea {
     transition: 0.3s;
     padding: 0 1.5rem;
     height: 0;
+    margin: 0;
   }
   .navbar .wrapper .navbar-nav .nav-item {
     width: 540px;
@@ -294,6 +295,7 @@ textarea {
   .navbar .wrapper .navbar-nav.open {
     padding: 0.5rem 1.5rem;
     height: 225px;
+    border-top: 1px solid #ffffff;
   }
 }
 
