--- a/style/index.css
+++ b/style/index.css
@@ -217,6 +217,12 @@ textarea {
   font-weight: 700;
   white-space: nowrap;
   letter-spacing: 1px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .navbar .wrapper .navbar-toggler {
@@ -231,6 +237,7 @@ textarea {
       -ms-flex-pack: justify;
           justify-content: space-between;
   padding: 0;
+  margin: 0;
   overflow: hidden;
 }
 
@@ -299,14 +306,16 @@ textarea {
   }
 }
 
-body {
-  height: 200vh;
-}
-
 .jumbotron {
   min-height: 100vh;
   max-height: 750px;
   padding-top: 67px;
+}
+
+@media (min-height: 750px) {
+  .jumbotron {
+    min-height: 750px;
+  }
 }
 
 .jumbotron .headline {
@@ -329,6 +338,7 @@ body {
 @media (max-width: 768px) {
   .jumbotron .headline h1 {
     text-align: left;
+    margin-bottom: 1.5rem;
   }
 }
 
@@ -370,7 +380,7 @@ body {
 
 @media (max-width: 768px) {
   .jumbotron .headline .cta {
-    margin: 1.5rem 0;
+    margin: 2rem 0;
   }
 }
 
@@ -381,6 +391,12 @@ body {
 
 @media (max-width: 768px) {
   .jumbotron .case {
+    margin-top: 0;
+  }
+}
+
+@media (max-width: 576px) {
+  .jumbotron .case {
     margin-top: 4rem;
   }
 }
@@ -388,8 +404,6 @@ body {
 .jumbotron .case img {
   width: 480px;
   max-width: 100%;
-  -webkit-transform: translateY(5%);
-          transform: translateY(5%);
   z-index: 1;
   position: relative;
 }
@@ -414,6 +428,8 @@ body {
   width: max-content;
   -webkit-box-shadow: 0 0 1rem rgba(0, 11, 36, 0.2);
           box-shadow: 0 0 1rem rgba(0, 11, 36, 0.2);
+  -webkit-transform: translateY(-10%);
+          transform: translateY(-10%);
   padding: 1rem;
 }
 
@@ -438,18 +454,17 @@ body {
 
 @media (max-width: 576px) {
   .jumbotron .case .widget {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+    -webkit-column-gap: 0;
+            column-gap: 0;
   }
   .jumbotron .case .widget li {
-    margin-bottom: 0.5rem;
-    width: 100%;
+    padding: 1rem;
   }
-  .jumbotron .case .widget li:last-child {
-    margin-bottom: 0;
+  .jumbotron .case .widget li .tag {
+    font-size: 0.9rem;
+  }
+  .jumbotron .case .widget li .value {
+    font-size: 1.35rem;
   }
 }
 
@@ -493,4 +508,115 @@ body {
 .jumbotron .case .widget li.meninggal .value {
   color: #e4122a;
 }
-/*# sourceMappingURL=global.css.map */
+
+.pengenalan {
+  padding: 1rem 0;
+  margin-top: 10rem;
+}
+
+@media (max-width: 768px) {
+  .pengenalan {
+    margin-top: 15rem;
+  }
+}
+
+@media (max-width: 400px) {
+  .pengenalan {
+    margin-top: 10rem;
+  }
+}
+
+.pengenalan .wrapper {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 50% 40%;
+      grid-template-columns: 50% 40%;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-column-gap: 1.5rem;
+          column-gap: 1.5rem;
+}
+
+@media (max-width: 992px) {
+  .pengenalan .wrapper {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    -ms-grid-rows: auto auto;
+        grid-template-rows: auto auto;
+  }
+}
+
+@media (max-width: 992px) {
+  .pengenalan .wrapper .left {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+  }
+}
+
+.pengenalan .wrapper .left .subtitle {
+  font-weight: 600;
+  color: #ff3347;
+}
+
+.pengenalan .wrapper .left .title {
+  font-weight: 700;
+  line-height: 1.2em;
+  margin-bottom: 1rem;
+}
+
+.pengenalan .wrapper .left .penyebab h6 {
+  margin-bottom: 0.5rem;
+}
+
+.pengenalan .wrapper .left .penyebab ul {
+  margin: 0;
+  padding-left: 1.5rem;
+}
+
+.pengenalan .wrapper .left .penyebab ul li {
+  position: relative;
+  margin-bottom: 0.5rem;
+}
+
+.pengenalan .wrapper .left .penyebab ul li::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  -webkit-transform: translate(-1.25rem, 0.55em);
+          transform: translate(-1.25rem, 0.55em);
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background-color: #ff3347;
+}
+
+.pengenalan .wrapper .right {
+  text-align: center;
+}
+
+@media (max-width: 992px) {
+  .pengenalan .wrapper .right {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+    margin-bottom: 1rem;
+  }
+}
+
+@media (max-width: 992px) {
+  .pengenalan .wrapper .right img {
+    width: 500px;
+  }
+}
+
+@media (max-width: 768px) {
+  .pengenalan .wrapper .right img {
+    width: 400px;
+  }
+}
+/*# sourceMappingURL=index.css.map */
