--- a/style/index.css
+++ b/style/index.css
@@ -443,6 +443,7 @@ textarea {
         grid-template-rows: auto auto;
     -webkit-column-gap: 2rem;
             column-gap: 2rem;
+    width: 85%;
   }
 }
 
@@ -458,7 +459,7 @@ textarea {
             column-gap: 0;
   }
   .jumbotron .case .widget li {
-    padding: 1rem;
+    padding: 1rem 1rem !important;
   }
   .jumbotron .case .widget li .tag {
     font-size: 0.9rem;
@@ -473,7 +474,7 @@ textarea {
   display: grid;
   -ms-grid-rows: auto auto auto;
       grid-template-rows: auto auto auto;
-  padding: 1rem 1.5rem;
+  padding: 1rem 2rem;
 }
 
 .jumbotron .case .widget li span {
