--- a/style/scss/_jumbotron.scss
+++ b/style/scss/_jumbotron.scss
@@ -32,10 +32,10 @@
       }
     }
 
-    p {
+    h6 {
       font-size: 1.2rem;
       text-align: center;
-      margin-bottom: 0;
+      margin-bottom: 0.5rem;
 
       @media (max-width: 1200px) {
         & {
