--- a/style/scss/_utils.scss
+++ b/style/scss/_utils.scss
@@ -198,3 +198,18 @@ textarea {
 .bg-none {
   background-color: transparent;
 }
+
+// Heading
+.heading {
+  .subtitle {
+    font-weight: 600;
+    color: $red;
+    margin-bottom: 0.25rem;
+  }
+
+  .title {
+    font-weight: 700;
+    line-height: 1.2em;
+    margin-bottom: 1rem;
+  }
+}
