--- a/style/scss/_gejala.scss
+++ b/style/scss/_gejala.scss
@@ -47,6 +47,7 @@
         border-radius: 4px;
         padding: 0.75rem 1.25rem;
         margin-bottom: 1.25rem;
+        transition: 0.2s;
 
         @media (max-width: 576px) {
           & {
