--- a/style/scss/_jumbotron.scss
+++ b/style/scss/_jumbotron.scss
@@ -36,6 +36,7 @@
       font-size: 1.2rem;
       text-align: center;
       margin-bottom: 0.5rem;
+      font-weight: 400;
 
       @media (max-width: 1200px) {
         & {
