--- a/style/scss/_navbar.scss
+++ b/style/scss/_navbar.scss
@@ -6,6 +6,12 @@
   right: 0;
   z-index: 9;
 
+  @media (max-width: 768px) {
+    & {
+      padding: 0.75rem 1rem;
+    }
+  }
+
   .wrapper {
     display: flex;
     justify-content: space-between;
