--- a/style/index.css
+++ b/style/index.css
@@ -104,6 +104,7 @@ h6 {
 p {
   margin-top: 0;
   margin-bottom: 1rem;
+  line-height: 1.5em;
 }
 
 button {
@@ -204,6 +205,28 @@ textarea {
   font-weight: 700;
   line-height: 1.2em;
   margin-bottom: 1rem;
+}
+
+.bullet-list {
+  margin: 0;
+  padding-left: 1.5rem;
+}
+
+.bullet-list li {
+  position: relative;
+  margin-bottom: 0.5rem;
+}
+
+.bullet-list li::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  -webkit-transform: translate(-1.25rem, 0.55em);
+          transform: translate(-1.25rem, 0.55em);
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background-color: #ff3347;
 }
 
 .navbar {
@@ -582,28 +605,6 @@ textarea {
   margin-bottom: 0.5rem;
 }
 
-.pengenalan .wrapper .left .penyebab ul {
-  margin: 0;
-  padding-left: 1.5rem;
-}
-
-.pengenalan .wrapper .left .penyebab ul li {
-  position: relative;
-  margin-bottom: 0.5rem;
-}
-
-.pengenalan .wrapper .left .penyebab ul li::before {
-  content: "";
-  position: absolute;
-  left: 0;
-  -webkit-transform: translate(-1.25rem, 0.55em);
-          transform: translate(-1.25rem, 0.55em);
-  width: 8px;
-  height: 8px;
-  border-radius: 50%;
-  background-color: #ff3347;
-}
-
 .pengenalan .wrapper .right {
   text-align: center;
 }
@@ -695,7 +696,7 @@ textarea {
 .gejala .wrapper .list .card .name {
   font-weight: 600;
   font-size: 1.1rem;
-  margin-bottom: 0.25rem;
+  margin-bottom: 0.375rem;
   display: inline-block;
 }
 
@@ -826,7 +827,7 @@ textarea {
 .pencegahan .list .card .body .name {
   font-weight: 600;
   font-size: 1.1rem;
-  margin-bottom: 0.25rem;
+  margin-bottom: 0.375rem;
   display: inline-block;
 }
 
@@ -838,5 +839,88 @@ textarea {
 .pencegahan .list .card:hover {
   -webkit-transform: scale(1.05);
           transform: scale(1.05);
+}
+
+.vaksinasi {
+  padding: 2.5rem 0;
+  margin: 5rem 0;
+}
+
+@media (max-width: 768px) {
+  .vaksinasi {
+    margin-top: 15rem;
+  }
+}
+
+@media (max-width: 400px) {
+  .vaksinasi {
+    margin-top: 10rem;
+  }
+}
+
+.vaksinasi .wrapper {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 50% 40%;
+      grid-template-columns: 50% 40%;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-column-gap: 1.5rem;
+          column-gap: 1.5rem;
+}
+
+@media (max-width: 992px) {
+  .vaksinasi .wrapper {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    -ms-grid-rows: auto auto;
+        grid-template-rows: auto auto;
+  }
+}
+
+@media (max-width: 992px) {
+  .vaksinasi .wrapper .left {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+  }
+}
+
+.vaksinasi .wrapper .left h6 {
+  margin-bottom: 0.5rem;
+}
+
+.vaksinasi .wrapper .left .value {
+  color: #ff3347;
+  font-weight: 600;
+}
+
+.vaksinasi .wrapper .right {
+  text-align: center;
+}
+
+@media (max-width: 992px) {
+  .vaksinasi .wrapper .right {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+    margin-bottom: 1rem;
+  }
+}
+
+@media (max-width: 992px) {
+  .vaksinasi .wrapper .right img {
+    width: 500px;
+  }
+}
+
+@media (max-width: 768px) {
+  .vaksinasi .wrapper .right img {
+    width: 400px;
+  }
 }
 /*# sourceMappingURL=index.css.map */
