--- a/style/scss/_faq.scss
+++ b/style/scss/_faq.scss
@@ -10,21 +10,20 @@
     }
 
     .accordion {
-      border-radius: 8px;
-      overflow: hidden;
-
       .item {
         background-color: #f6f7fb;
+        border-radius: 8px;
         overflow: hidden;
+        margin-bottom: 0.25rem;
 
         .question {
           font-weight: 500;
           font-size: 1.1rem;
           padding: 0.75rem 1.5rem;
           cursor: pointer;
-          display: flex;
+          display: grid;
+          grid-template-columns: 1fr 30px;
           align-items: center;
-          justify-content: space-between;
 
           @media (max-width: 768px) {
             & {
@@ -37,7 +36,7 @@
             fill: $dark;
             width: auto;
             height: 18px;
-            margin-left: 0.5rem;
+            margin-left: 1rem;
           }
         }
 
