--- a/style/scss/_faq.scss
+++ b/style/scss/_faq.scss
@@ -45,6 +45,7 @@
           padding: 0 1.5rem;
           transition: 0.3s;
           box-sizing: content-box;
+          margin: 0;
 
           @media (max-width: 768px) {
             & {
