--- a/style/index.css
+++ b/style/index.css
@@ -253,6 +253,9 @@ textarea {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .navbar .wrapper .navbar-logo {
@@ -270,10 +273,20 @@ textarea {
 
 .navbar .wrapper .navbar-toggler {
   display: none;
+  width: 16px;
+  height: 12px;
+  padding: 0;
+  margin-right: 0.375rem;
 }
 
-.navbar .wrapper .navbar-toggler img {
-  width: 16px;
+.navbar .wrapper .navbar-toggler::before {
+  content: "";
+  background-image: url(../../image/hamburger-menu.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
 }
 
 .navbar .wrapper .navbar-nav {
@@ -321,6 +334,9 @@ textarea {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
   .navbar .wrapper .navbar-nav {
     position: absolute;
