--- a/style/scss/_navbar.scss
+++ b/style/scss/_navbar.scss
@@ -16,6 +16,7 @@
   .wrapper {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 
     .navbar-logo {
       font-size: 1.5rem;
@@ -28,9 +29,19 @@
 
     .navbar-toggler {
       display: none;
+      width: 16px;
+      height: 12px;
+      padding: 0;
+      margin-right: 0.375rem;
 
-      img {
-        width: 16px;
+      &::before {
+        content: "";
+        background-image: url(../../image/hamburger-menu.png);
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        width: 100%;
+        height: 100%;
       }
     }
 
@@ -67,6 +78,7 @@
       .navbar-toggler {
         display: flex;
         align-items: center;
+        justify-content: center;
       }
 
       .navbar-nav {
